# FerriteOS

./: .gitignore  README.md  README1.md
src/rust/: Cargo.toml  Kconfig  Makefile
src/rust/.cargo/: config.toml
src/rust/src/: build.rs  config.rs  errno.rs  error.rs  ffi.rs  fn.c  lib.rs  result.rs
src/rust/src/arch/: arch.rs
src/rust/src/bindings/: config.rs
src/rust/src/components/ramfs/: core.rs  element.rs  error.rs  mod.rs  mount.rs  ops.rs  types.rs
src/rust/src/debug/: mux_deadlock.rs  mux_debug.rs  queue_debug.rs  sched_debug.rs  sem_debug.rs
src/rust/src/err/: err.rs  mod.rs
src/rust/src/error/: mod.rs
src/rust/src/event/: core.rs  error.rs  event.rs  mod.rs  types.rs
src/rust/src/exc/: exc.rs  mod.rs
src/rust/src/exception/: backtrace.rs  exc_interaction.rs  excinfo_dump.rs  mod.rs
src/rust/src/ffi/bindings/: mod.rs
src/rust/src/ffi/exports/: bitmap.rs  err.rs  exc.rs  hwi.rs  misc.rs  mod.rs  mutex.rs  queue.rs  ramfs.rs  semaphore.rs  semaphore1.rs  stack.rs  task.rs  tick.rs  timer.rs
src/rust/src/hwi/: mod.rs
src/rust/src/interrupt/: error.rs  global.rs  mod.rs  types.rs
src/rust/src/mem/: defs.rs  memory.rs  mempool.rs  memstat.rs  mod.rs  multiple_dlink_head.rs
src/rust/src/memory/: mod.rs
src/rust/src/misc/: misc.rs
src/rust/src/mutex/: core.rs  debug.rs  error.rs  global.rs  mod.rs  types.rs  wait.rs
src/rust/src/percpu/: mod.rs
src/rust/src/printf/: printf.rs
src/rust/src/queue/: error.rs  global.rs  info.rs  management.rs  mod.rs  operation.rs  types.rs
src/rust/src/semaphore/: core.rs  error.rs  global.rs  types.rs
src/rust/src/semaphore1/: bindings.rs  configs.rs  core.rs  error.rs  global.rs  macros.rs  mod.rs  types.rs
src/rust/src/shellcmd/: help.rs  hwi.rs  mempt.rs  mod.rs  shcmd.rs  stack.rs  swtmr.rs  sysinfo.rs  task.rs  types.rs
src/rust/src/spinlock/: mod.rs
src/rust/src/stack/: error.rs  global.rs  mod.rs  types.rs
src/rust/src/swtmr/: mod.rs
src/rust/src/task/: entry.rs  error.rs  global.rs  idle.rs  info.rs  mod.rs  monitor.rs  sched.rs  signal.rs  timer.rs  types.rs
src/rust/src/task/lifecycle/: create.rs  delete.rs  entry.rs  init.rs  mod.rs  suspend.rs
src/rust/src/task/manager/: create.rs  (+5 more)
src/rust/src/tick/: global.rs  mod.rs
src/rust/src/timer/: api.rs  global.rs  init.rs  internal.rs  scan.rs  types.rs
src/rust/src/trace/: trace.rs
src/rust/src/utils/: align.rs  bitmap.rs  dl_list.rs  list.rs  log.rs  memdump.rs  mod.rs  printf.rs  sort.rs  sortlink.rs
(+61 files in other folders)
