[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
semihosting = { version = "0.1", features = ["stdio", "panic-handler"] }
bitflags = "2.9.1"

[lib]
crate-type = ["staticlib"]

[features]
default = [
	"memory_task_statistics",
	"time_slice",
	"task_static_allocation",
	"ipc_event",
	"task_monitor",
	"backtrace",
	"shell",
	"software_timer",
]
software_timer = []
software_timer_in_isr = []
time_slice = []
task_monitor = []
ipc_event = []

compat_posix = []
debug_sched_statistics = []
memory_task_statistics = []
task_static_allocation = []
shell_excinfo_dump = []
shell_dmesg = []
backtrace = []
exc_interaction = []
shell = []
