[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
semihosting = { version = "0.1", features = ["stdio", "panic-handler"] }
bitflags = { version = "2.9.1" }
heapless = { version = "0.8" }

[lib]
crate-type = ["staticlib"]

[features]
default = [
	"memory_task_statistics",
	"time_slice",
	"task_static_allocation",
	"ipc_event",
	"task_monitor",
	"backtrace",
	"shell",
	"software_timer",
	"log-error",
	"mutex-waitmode-prio",
]
software_timer = []
software_timer_in_isr = []
time_slice = []
task_monitor = []
ipc_event = []
backtrace = []

compat_posix = []
debug_sched_statistics = []
memory_task_statistics = []
task_static_allocation = []
shell = []
shell_excinfo_dump = []
exc_interaction = []

# 日志级别features
log-emergency = []
log-common = []
log-error = []
log-warning = []
log-info = []
log-debug = []

debug-mutex = []
debug-mutex-deadlock = []

mutex-waitmode-prio = []
mutex-waitmode-fifo = []