[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
semihosting = { version = "0.1", features = ["stdio", "panic-handler"] }
bitflags = { version = "2.9.1" }
heapless = { version = "0.8" }
linked_list_allocator = { version = "0.10.5" }
critical-section = { version = "1.0", features = ["restore-state-u32"] }

[lib]
crate-type = ["staticlib"]

[features]
default = [
	"time_slice",
	"task_static_allocation",
	"task_monitor",
	"shell",
	"log-debug",
	"mutex-waitmode-prio",
]
time_slice = []
task_monitor = []
task_static_allocation = []

shell = []

log-emergency = []
log-common = []
log-error = []
log-warning = []
log-info = []
log-debug = []

mutex-waitmode-prio = []
mutex-waitmode-fifo = []

timer-in-isr = []
